@@ -1,5 +1,6 @@
 plugins {
     id("net.ltgt.errorprone") version "3.0.1"
+    id 'com.diffplug.spotless' version '6.25.0'
 }
 
 apply plugin: 'java'
@@ -7,6 +8,13 @@ apply plugin: 'java'
 repositories {
     mavenLocal()
     mavenCentral()
+}
+
+spotless {
+    java {
+        googleJavaFormat('1.17.0') // or latest compatible with Java 17
+        target 'src/**/*.java'
+    }
 }
 
 group = 'com.google.code.gson'
@@ -22,10 +30,10 @@ dependencies {
     annotationProcessor "com.uber.nullaway:nullaway:0.12.4-SNAPSHOT"
     annotationProcessor "edu.ucr.cs.riple.annotator:annotator-scanner:1.3.16-SNAPSHOT"
     implementation "edu.ucr.cs.riple.annotator:annotation-util:1.3.16-SNAPSHOT"
-    compileOnly "com.google.code.findbugs:jsr305:3.0.2"
+    implementation "com.google.code.findbugs:jsr305:3.0.2"
     errorprone "com.google.errorprone:error_prone_core:2.35.1"
     errorproneJavac "com.google.errorprone:javac:9+181-r4173-1"
-    compileOnly "com.uber.nullaway:nullaway-annotations:0.12.4-SNAPSHOT"
+    implementation "com.uber.nullaway:nullaway-annotations:0.12.4-SNAPSHOT"
 }
 
 tasks.withType(JavaCompile).configureEach {
@@ -35,7 +43,8 @@ tasks.withType(JavaCompile).configureEach {
         '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
         '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
         '--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'
+        '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+        '--add-reads', 'com.google.gson=ALL-UNNAMED'
     ]
 }
 def scanner_path = project.rootProject.projectDir.toString() + "/annotator-out/scanner.xml"
